--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@
 }
 
 body {
-    background-image: url(./images/backdrop1.jpg);
+    background-image: url(./images/backdropog.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
+    image-rendering: pixelated;
     font-family: 'Poppins', sans-serif;
     letter-spacing: normal;
     color: white;
@@ -20,7 +21,7 @@ h1 {
 
 .container {
     display: grid;
-    height: 100vh;
+    height:100vh;
     grid-template-columns: 1.5fr 1fr 1fr 1fr;
     grid-template-rows: 0.5fr 1.5fr 1.5fr 0.2fr;
     grid-template-areas: 
@@ -29,12 +30,11 @@ h1 {
         "sidebar dayfour dayfive daysix"
         "sidebar footer footer footer";
     box-sizing: border-box;
-    gap: 0.3rem;
+    gap: 0.2rem;
     padding: 50px;
     padding-left: 100px;
     padding-right: 100px;
     backdrop-filter:blur(5px);
-
 }
 
 .search {
@@ -128,35 +128,25 @@ p.wind, p.humidity {
     display: block; 
 }
 
-#dayone {
+#dayone,
+#daytwo,
+#daythree,
+#dayfour,
+#dayfive,
+#daysix
+ {
     background-color: #ffffff3f;
-    grid-area: dayone;
+    padding: 20px;
+    text-align: center;
 }
 
-#daytwo {
-    background-color: #ffffff3f;
-    grid-area: daytwo;
+.weathercard h3 {
+    font-size: 18px;
 }
 
-#daythree {
-    background-color: #ffffff3f;
-    grid-area: daythree;
-}
-
-#dayfour {
-    background-color: #ffffff3f;
-    grid-area: dayfour;
-}
-
-#dayfive {
-    background-color: #ffffff3f;
-    grid-area: dayfive;
-}
-
-#daysix {
-    background-color: #ffffff3f;
-    grid-area: daysix;
-}
+.weathercard h4 {
+    font-size: 16px;
+} 
 
 nav {
     background-color: #ffffff3f;
@@ -202,6 +192,9 @@ footer img {
             "daysix"
             "footer";
     }
+    body {
+        background-repeat: repeat-y;
+    }
     nav {
         border-top-right-radius: 25px;
         border-top-left-radius: 25px;
@@ -209,6 +202,29 @@ footer img {
     
     #sidebar {
         border-radius: 0;
+    }
+
+    #dayone,
+    #daytwo,
+    #daythree,
+    #dayfour,
+    #dayfive,
+    #daysix {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    div.weathercard {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+
+    div.weathercard h4 {
+        margin: 0 20px 0 20px;
     }
 
     footer {
